--- a/docs/team/dandford.adoc
+++ b/docs/team/dandford.adoc
@@ -66,7 +66,7 @@ include::../UserGuide.adoc
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=Categories]
 
 include::../DeveloperGuide.adoc[tag=dataencryption]
 
