--- a/docs/team/wongsm7.adoc
+++ b/docs/team/wongsm7.adoc
@@ -38,9 +38,9 @@ ClerkPro is a desktop application used for managing clinic's appointments, queue
 *** Updated the UI for doctors on duty and queue (Pull requests https://github.com/AY1920S1-CS2103T-T09-3/main/pull/203[#203], https://github.com/AY1920S1-CS2103T-T09-3/main/pull/134[#134], https://github.com/AY1920S1-CS2103T-T09-3/main/pull/119/files[#119])
 ** Documentation:
 *** Did cosmetic tweaks to existing contents of the User Guide.
-*** Created various UML diagrams for for Developer Guide. https://github.com/AY1920S1-CS2103T-T09-3/main/pull/87[#87]
+*** Created various UML diagrams for Developer Guide. https://github.com/AY1920S1-CS2103T-T09-3/main/pull/87[#87]
 ** Community:
-*** Reported bugs and suggestions for other teams in the class
+*** Reported bugs and suggestions for other teams
 
 == Contributions to the User Guide
 
