Updated delete command in user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -102,8 +102,8 @@ This command overwrites existing tags if you input tags.
 
 {nbsp} +
 
-. _Delete an existing expense: expense rm_ +
-Deletes an existing expense that is being displayed on the GUI. +
+. _Delete an existing expense: delete_ +
+You can delete any unwanted existing expense that is being displayed. +
 {nbsp} +
 Usage:
 
@@ -115,7 +115,7 @@ Deletes the expense with index 3. +
 {nbsp} +
 
 . _List all expenses: list_ +
-You can list all the expenses in your expense list using this command. `list` will ignore all parameters. +
+You can list all the expenses in your expense list using this command, allowing you to easily get an overview of all your expenses. `list` will ignore all parameters. +
 {nbsp} +
 Usage:
 
@@ -130,14 +130,7 @@ image::ListCommandExample.png[]
 {nbsp} +
 
 . _Clear all expenses: clear_ +
-You can clear all the expenses in your expense list using this command.
-
-[WARNING]
-This _actually_ deletes all your commands, use with caution! The undo feature may come in handy if you unintentionally used this command.
-
-[NOTE]
-Archived expenses are not cleared.
-
+You can clear all the expenses in your expense list using this command. +
 {nbsp} +
 Usage:
 
@@ -148,8 +141,11 @@ Example: +
 Clears all your expenses.
  +
 
+[WARNING]
+This _actually_ deletes all your commands, use with caution! The undo feature may come in handy if you unintentionally used this command.
 
-
+[NOTE]
+Archived expenses are not cleared. +
 
 // tag::tagging[]
 === Tagging expenses: `tag`
