--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -536,7 +536,7 @@ the `TransactionList` object in original order when [blue]`sort reset` is called
 |Alternative 1 was implemented. Alternative 1 allowed exporting of the data file in the desired order anytime while treasurerPro was running while
 alternative 2 meant that the data file would be updated only when treasurerPro is exited. The implementation is shownin <<lists, Figure 24>>, below the table.
 
-|The Members t's `Model` interface is passed as parameters into Home tab's `Logic` to give `Logic` access to all public methods
+|The Members tab's `Model` interface is passed as parameters into Home tab's `Logic` to give `Logic` access to all public methods
 of `ModelManager`.
 |A new interface is made to allow the only used method of Members tab's `ModelManager` to be accessed in Home tab's
 `Logic`.
@@ -815,12 +815,38 @@ This section explains the design considerations for some crucial implementations
 |===
 |Alternative 1 |Alternative 2 |Conclusion and Explanation
 
-|
+| `ModelManager` could contain a separate `InventoryList` that stores the original list in order to restore the original
+order when [blue]`sort reset` is called.
+
+*Pros*: It is relatively fast.
+
+*Cons*: It takes up a lot of memory.
+
+| Each `Item` could store a copy of the original ID as a private attribute. When [blue]`sort reset` is called, the list
+is sorted by the original ID.
+
+*Pros*: Keeping one list is better for memory complexity.
+
+*Cons*: Sorting could be slightly slow.
+
+| Alternative 2 has been chosen. The time complexity of sorting is not very high, but it has a much higher advantage in
+memory complexity.
+
+| An ArrayList is used to store `Item` objects in the `InventoryList`.
 
 *Pros*:
 
 *Cons*:
 
+| A LinkedList is used to store `Item` objects in the `InventoryList`.
+
+*Pros*:
+
+*Cons*:
+|
+Alternative 1 has been implemented. An ArrayList has better performance for the set and get methods than a LinkedList which
+would frequently used in `ModelManager`.
+|
 |===
 
 === Cashier Tab
