--- a/docs/team/michaelatsh.adoc
+++ b/docs/team/michaelatsh.adoc
@@ -19,9 +19,9 @@ Our team consists of five members. Four, including me, are Year 2 Computer Scien
 Year 4 Computer Engineering Undergraduate student.
 
 === About the Project
-This project was created as part of the “CS2103T Software Engineering” module, a project-driven software engineering
-module offered by the National University of Singapore (NUS). We were tasked with the assignment of morphing or
-enhancing an existing desktop application called AddressBook over the course of 13 weeks and chose the former. I am
+This project is part of the “CS2103T Software Engineering” module, a project-driven software engineering
+module currently offered by the National University of Singapore (NUS). We have been tasked with the assignment of
+morphing or enhancing an existing desktop application called AddressBook over the course of 13 weeks and chose the former. I am
 proud to present to you the end result of our hard work – treasurerPro.
 
 === About the Product
@@ -58,7 +58,7 @@ the application. It also indicates a generic command format for the command box 
 Text with this blue font and grey highlight indicates a command that can be inputted by the user.
 
 == Summary of Contributions
-My role was to design and write the code for the Inventory tab. This section will describe my contributions in greater
+My role is to design and write the code for the Inventory tab. This section will describe my contributions in greater
 detail.
 
 === Main Contributions
@@ -72,14 +72,15 @@ quantity and the cost per unit is recalculated appropriately.
 ** Function: This feature allows you to sort the list of items in 3 distinct ways – description, category and quantity.
 ** Justification: It aids you in re-ordering the list as you please. This can help you with various matters such as
 spotting items low in quantity and in need of restocking.
-** Highlights: If you change your mind, the `sort reset` command allows you to revert the list to the order it was in
-when the application was first opened.
+** Highlights: If you change your mind, the `sort reset` command allows you to revert the list to the order it had been
+in when the application was first opened.
 
 === Other Contributions
 * Documentation:
 * Community:
 ** Helped to fix teammates' test cases.
 ** Cleaned checkstyle errors in other teammates' packages.
+** Helped to edit other teammate's User Guide.
 
 == Contributions to the User Guide
 This section showcases some of my contributions to the User Guide.
